fix overflow mobile

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -1372,6 +1372,10 @@ footer {
         -webkit-overflow-scrolling: touch;
     }
 
+    .dashboardToggleHolder {
+        flex-direction: column;
+    }
+
     .entryChartHolder {
         flex-direction: column;
     }
